--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -34,6 +34,9 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+         
       - name: State the organization
-        run: echo The organization name is: github.repository_owner
+        run: echo "The organization name is:${{github.repository_owner}}"
+
       - name: State the teams in this organization
+        run: echo "Teams TBD"
