--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -1,5 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
+#The name at top-level gives the job a name that is seen in the Actions tab.
 name: Test Github Action
 
 # Controls when the workflow will run
@@ -23,6 +24,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      # Pretty much all Github Actions need and utilize this
       - uses: actions/checkout@v4
 
       # Runs a single command using the runners shell
@@ -41,5 +43,7 @@ jobs:
       - name: State the teams in this organization
         run: echo "Teams TBD"
 
+      # GITHUB_WORKSPACE is an environmental variable whose value is the default working directory on the runner for steps 
+      # This is also the default location of your repository when using the checkout action. Ex. /home/runner/work/bash-git-script/bash-git-script
       - name: State WORKSPACE var
         run: echo "Github Workspace = $GITHUB_WORKSPACE"
