--- a/.github/workflows/test-pr-action-1.yml
+++ b/.github/workflows/test-pr-action-1.yml
@@ -31,7 +31,7 @@ jobs:
           PR_NUMBER=${{ github.event.number }}
           COMMENT="This is an automated comment"
           GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
-          COMMENT_URL="https://api.github.com/org-mushroom-kingdom/${{github.repository}}/issues/${PR_NUMBER}/comments"
+          COMMENT_URL="https://api.github.com/${{github.repository}}/issues/${PR_NUMBER}/comments"
 
           # -H = custom curl header
           curl -s -H "Authorization: token ${GITHUB_TOKEN}" -X POST $COMMENT_URL -d "{\"body\":\"$COMMENT\"}"
