--- a/.github/workflows/test-pr-action-1.yml
+++ b/.github/workflows/test-pr-action-1.yml
@@ -25,16 +25,31 @@ jobs:
 
       # Use GitHub API to create a comment on the PR
       - name: Automated comment on PR
-        run: |
-          PR_NUMBER=${{ github.event.pull_request.number }}
-          # Try just the number...
-          PR_NUMBER=${{ github.event.number }}
-          COMMENT="This is an automated comment"
-          GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
-          COMMENT_URL="https://api.github.com/${{github.repository}}/issues/${PR_NUMBER}/comments"
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const octokit = new Octokit({
+              auth: 'YOUR-TOKEN'
+            })
+            const issue_num = "${{ github.event.pull_request.number }}"
+            await octokit.request('POST /repos/{owner}/{repo}/issues/{issue_number}/comments', {
+              owner: 'org-mushroom-kingdom',
+              repo: 'bash-git-script',
+              issue_number: issue_num,
+              body: 'T',
+              headers: {
+                'X-GitHub-Api-Version': '2022-11-28'
+              }
+        # run: |
+        #   PR_NUMBER=${{ github.event.pull_request.number }}
+        #   # Try just the number...
+        #   PR_NUMBER=${{ github.event.number }}
+        #   COMMENT="This is an automated comment"
+        #   GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
+        #   COMMENT_URL="https://api.github.com/${{github.repository}}/issues/${PR_NUMBER}/comments"
 
-          # -H = custom curl header
-          curl -s -H "Authorization: token ${GITHUB_TOKEN}" -X POST $COMMENT_URL -d "{\"body\":\"$COMMENT\"}"
+        #   # -H = custom curl header
+        #   curl -s -H "Authorization: token ${GITHUB_TOKEN}" -X POST $COMMENT_URL -d "{\"body\":\"$COMMENT\"}"
 
       - name: Get most recent hash of this workflow
         run: echo "Most recent hash--TBD"
