--- a/.github/workflows/test-pr-action-1.yml
+++ b/.github/workflows/test-pr-action-1.yml
@@ -28,6 +28,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
+            const { Octokit } = require("@octokit/action");
             const octokit = new Octokit({
               auth: "${{ secrets.GITHUB_TOKEN }}"
             })
