PR action back to basics

--- a/.github/workflows/test-pr-action-1.yml
+++ b/.github/workflows/test-pr-action-1.yml
@@ -16,47 +16,52 @@ jobs:
   get-filenames-in-pr:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    name: Get Filenames in PR 
+    name: PR Activity 
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
 
+      - name: Echo PR vars
+        run: |
+          echo "github.event.number = ${{ github.event.number }}"
+          echo "github.event.pull_request.number = ${{ github.event.pull_request.number }}"
+          # Try just the number...
       # Use GitHub API to create a comment on the PR
       - name: Automated comment on PR
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const { Octokit } = require("@octokit/action");
-            const octokit = new Octokit({
-              auth: "${{ secrets.GITHUB_TOKEN }}"
-            })
+        # uses: actions/github-script@v7
+        # with:
+        #   script: |
+        #     const { Octokit } = require("@octokit/action");
+        #     const octokit = new Octokit({
+        #       auth: "${{ secrets.GITHUB_TOKEN }}"
+        #     })
             
-            const issue_num = "${{ github.event.pull_request.number }}"
+        #     const issue_num = "${{ github.event.pull_request.number }}"
             
-            await octokit.request('POST /repos/{owner}/{repo}/issues/{issue_number}/comments', {
-              owner: 'org-mushroom-kingdom',
-              repo: 'bash-git-script',
-              issue_number: issue_num,
-              body: 'T',
-              headers: {
-                'X-GitHub-Api-Version': '2022-11-28'
-              }
-            })
-        # run: |
-        #   PR_NUMBER=${{ github.event.pull_request.number }}
-        #   # Try just the number...
-        #   PR_NUMBER=${{ github.event.number }}
-        #   COMMENT="This is an automated comment"
-        #   GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
-        #   COMMENT_URL="https://api.github.com/${{github.repository}}/issues/${PR_NUMBER}/comments"
+        #     await octokit.request('POST /repos/{owner}/{repo}/issues/{issue_number}/comments', {
+        #       owner: 'org-mushroom-kingdom',
+        #       repo: 'bash-git-script',
+        #       issue_number: issue_num,
+        #       body: 'T',
+        #       headers: {
+        #         'X-GitHub-Api-Version': '2022-11-28'
+        #       }
+        #     })
+        run: |
+          PR_NUMBER=${{ github.event.pull_request.number }}
+          # Try just the number...
+          PR_NUMBER=${{ github.event.number }}
+          COMMENT="This is an automated comment"
+          GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
+          COMMENT_URL="https://api.github.com/${{github.repository}}/issues/${PR_NUMBER}/comments"
+          echo "COMMENT_URL = ${COMMENT_URL}"
+          # -H = custom curl header
+          # curl -s -H "Authorization: token ${GITHUB_TOKEN}" -X POST $COMMENT_URL -d "{\"body\":\"$COMMENT\"}"
 
-        #   # -H = custom curl header
-        #   curl -s -H "Authorization: token ${GITHUB_TOKEN}" -X POST $COMMENT_URL -d "{\"body\":\"$COMMENT\"}"
-
-      - name: Get most recent hash of this workflow
-        run: echo "Most recent hash--TBD"
+      # - name: Get most recent hash of this workflow
+      #   run: echo "Most recent hash--TBD"
         # run: echo "Attempting to get most most recent hash of workflow..."
           # You can use GitHub's API to query the last run of your workflow, getting the git hash of that commit. 
           # Then compare with the current hash to find the list of changed files - regardless of how many commits were pushed at a time.
