--- a/.github/workflows/test-pr-action-1.yml
+++ b/.github/workflows/test-pr-action-1.yml
@@ -27,7 +27,6 @@ jobs:
         run: |
           echo "github.event.number = ${{ github.event.number }}"
           echo "github.event.pull_request.number = ${{ github.event.pull_request.number }}"
-          # Try just the number...
       # Use GitHub API to create a comment on the PR
       - name: Automated comment on PR
         # uses: actions/github-script@v7
@@ -52,13 +51,13 @@ jobs:
         run: |
           PR_NUMBER=${{ github.event.pull_request.number }}
           # Try just the number...
-          PR_NUMBER=${{ github.event.number }}
+          # PR_NUMBER=${{ github.event.number }}
           COMMENT="This is an automated comment"
           GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
-          COMMENT_URL="https://api.github.com/${{github.repository}}/issues/${PR_NUMBER}/comments"
+          COMMENT_URL="https://api.github.com/repos/${{github.repository}}/issues/${PR_NUMBER}/comments"
           echo "COMMENT_URL = ${COMMENT_URL}"
           # -H = custom curl header
-          # curl -s -H "Authorization: token ${GITHUB_TOKEN}" -X POST $COMMENT_URL -d "{\"body\":\"$COMMENT\"}"
+          curl -s -H "Authorization: token ${GITHUB_TOKEN}" -X POST $COMMENT_URL -d "{\"body\":\"$COMMENT\"}"
 
       # - name: Get most recent hash of this workflow
       #   run: echo "Most recent hash--TBD"
