--- a/.github/workflows/test-pr-action-1.yml
+++ b/.github/workflows/test-pr-action-1.yml
@@ -19,7 +19,7 @@ jobs:
     permissions:
       issues: write
       pull-requests: write
-    name: PR Activity 
+    name: Automated PR Comments 
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -46,12 +46,17 @@ jobs:
           # -H = custom curl header, -X used to specify HTTP method, -d indicates the data to send
           curl -s -H "Authorization: token ${GITHUB_TOKEN}" -X POST $COMMENT_URL -d "{\"body\":\"$COMMENT\"}"
 
+      #TODO: Use a conditional here to decide whether post a comment
+      #TODO: Use a conditional here to alter a comment's text
+
+      #TODO: MOVE THIS somewhere else, like a separate CODEOWNERS related action
       # - name: Get most recent hash of this workflow
       #   run: echo "Most recent hash--TBD"
         # run: echo "Attempting to get most most recent hash of workflow..."
           # You can use GitHub's API to query the last run of your workflow, getting the git hash of that commit. 
           # Then compare with the current hash to find the list of changed files - regardless of how many commits were pushed at a time.
-
+      
+      #TODO: MOVE THIS somewhere else, like a separate CODEOWNERS related action
       # - name: Get changed files
       #   # Use github.event.pull_request to get the base SHA* (the SHA where the PR originated from) with the head branch's commit SHA (the latest commit in the PR) 
       #   # and output only the names of the changed files. 
