Add pipe for multiline

--- a/.github/workflows/test-pr-action-1.yml
+++ b/.github/workflows/test-pr-action-1.yml
@@ -58,7 +58,7 @@ jobs:
         #Example of using a conditional (incoming/feature branch contains 'readme' or 'README')
         -name: Conditional comment on PR (if feature branch contains 'readme')
         if: contains(env.FEATURE_BRANCH, 'readme') || contains(env.FEATURE_BRANCH, 'README')
-        run: 
+        run: | 
           COMMENT="This is an automated comment that only shows up if the feature branch contains 'readme' or 'README'"
           curl -s -H "Authorization: token ${GITHUB_TOKEN}" -X POST $COMMENT_URL -d "{\"body\":\"$COMMENT\"}"
 
