--- a/.github/workflows/test-pr-action-1.yml
+++ b/.github/workflows/test-pr-action-1.yml
@@ -39,8 +39,9 @@ jobs:
           echo "github.event.number = ${{ github.event.number }}"
           echo "github.event.pull_request.number = ${{ github.event.pull_request.number }}"
           echo "Incoming branch/feature branch (github.head_ref)	= ${{github.head_ref}}"
-          echo Target branch (github.event.pull_request.base.ref) "${{ github.event.pull_request.base.ref }}"
+          echo "Target branch (github.event.pull_request.base.ref) = ${{ github.event.pull_request.base.ref }}"
           echo "github.ref	= ${{github.ref}}"
+      
       # Use GitHub API to create a comment on the PR (POST to specific issue URL /comments)
       - name: Automated comment on PR (Unconditional)
         run: |
