informative designations, upd readme

--- a/.github/workflows/print-env-vars.yml
+++ b/.github/workflows/print-env-vars.yml
@@ -1,4 +1,4 @@
-# This workflow echo's various environmental variables within the context of the git-bash-script repo for informational purposes
+# Informative: This workflow echo's various environmental variables within the context of the git-bash-script repo for informational purposes
 
 name: Echo Environmental Variables
 
