--- a/.github/workflows/print-github-context-vars.yml
+++ b/.github/workflows/print-github-context-vars.yml
@@ -1,4 +1,4 @@
-# This workflow echo's various Github 'github' context variables within the context of the git-bash-script repo for informational purposes
+# Informative: This workflow echo's various Github 'github' context variables within the context of the git-bash-script repo for informational purposes
 # See https://docs.github.com/en/actions/reference/workflows-and-actions/contexts#github-context
 
 name: Print Github Context Variables
