--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -18,6 +18,9 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "test-job"
+  env:
+    PR_NUMBER: "33"
+    COMMENT_URL: "https://api.github.com/repos/${{github.repository}}/issues/$PR_NUMBER/comments"
   test-job:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -32,12 +35,18 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
 
-      # Runs a set of commands using the runners shell
+      # Runs a set of commands using the runners shell. The usage of the pipe | is necessary
       - name: Run a multi-line script
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
          
+      - name: Echo env vars
+        run: |
+          echo "PR_NUMBER = $PR_NUMBER"
+          echo "PR_NUMBER = ${PR_NUMBER}"
+          echo $COMMENT_URL
+      
       - name: Make shell scripts executable
         run: chmod +x ./shell-scripts/*.sh # Gives execute permissions to the script
       
@@ -49,7 +58,7 @@ jobs:
         run: echo "The organization name is:${{github.repository_owner}}"
 
       - name: State the teams in this organization
-        run: echo "Teams TBD"
+        run: echo "TODO Teams TBD"
 
       # GITHUB_WORKSPACE is an environmental variable whose value is the default working directory on the runner for steps 
       # This is also the default location of your repository when using the checkout action. Ex. /home/runner/work/bash-git-script/bash-git-script
