--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       PR_NUMBER: "33"
-      COMMENT_URL: "https://api.github.com/repos/${{github.repository}}/issues/$PR_NUMBER/comments"
+      COMMENT_URL: "https://api.github.com/repos/${{github.repository}}/issues/NUM/comments"
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -45,8 +45,9 @@ jobs:
         run: |
           echo "PR_NUMBER = $PR_NUMBER"
           echo "$ {PR_NUMBER} = ${PR_NUMBER}"
-          echo $COMMENT_URL
-      
+          echo "URL before:  $COMMENT_URL"
+          COMMENT_URL="${COMMENT_URL}/NUM/${PR_NUMBER}"
+          echo "URL after:  $COMMENT_URL"
       - name: Make shell scripts executable
         run: chmod +x ./shell-scripts/*.sh # Gives execute permissions to the script
       
