rework PR action logic

--- a/.github/workflows/test-pr-action-1.yml
+++ b/.github/workflows/test-pr-action-1.yml
@@ -27,7 +27,6 @@ jobs:
       # Try just the number...
       # PR_NUMBER=${{ github.event.number }}
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      COMMENT_URL: "https://api.github.com/repos/${{github.repository}}/issues/$PR_NUMBER/comments"
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -47,16 +46,14 @@ jobs:
           echo $COMMENT_URL
       
       # Use GitHub API to create a comment on the PR (POST to specific issue URL /comments)
+      # COMMENT_URL is declared and then immediately changed because 
       - name: Automated comment on PR (Unconditional)
         run: |
-          # PR_NUMBER=${{ github.event.pull_request.number }}
-          # # Try just the number...
-          # # PR_NUMBER=${{ github.event.number }}
           COMMENT="This is an automated comment that goes in every pull request in the bash-git-script repo."
-          # GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
-          # COMMENT_URL="https://api.github.com/repos/${{github.repository}}/issues/${PR_NUMBER}/comments"
-          # echo "COMMENT_URL = ${COMMENT_URL}"
+          COMMENT_URL="https://api.github.com/repos/${{github.repository}}/issues/NUM/comments"
+          COMMENT_URL="${COMMENT_URL/NUM/$PR_NUMBER}"
           # # -H = custom curl header, -X used to specify HTTP method, -d indicates the data to send
+          
           echo $COMMENT_URL
           curl -s -H "Authorization: token ${GITHUB_TOKEN}" -X POST $COMMENT_URL -d "{\"body\":\"$COMMENT\"}"
 
@@ -64,6 +61,8 @@ jobs:
       - name: Conditional comment on PR (if feature branch contains 'readme')
         if: contains(env.FEATURE_BRANCH, 'readme') || contains(env.FEATURE_BRANCH, 'README')
         run: | 
+          COMMENT_URL="https://api.github.com/repos/${{github.repository}}/issues/NUM/comments"
+          COMMENT_URL="${COMMENT_URL/NUM/$PR_NUMBER}"
           COMMENT="This is an automated comment that only shows up if the feature branch contains 'readme' or 'README'"
           curl -s -H "Authorization: token ${GITHUB_TOKEN}" -X POST $COMMENT_URL -d "{\"body\":\"$COMMENT\"}"
 
