--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -74,7 +74,7 @@ jobs:
         env: 
           DIVISIBLE_BY_2: false 
         run: |
-          # ./shell-scripts/divide.sh is_divisible_by_2 2 >> $GITHUB_OUTPUT 
+          ./shell-scripts/divide.sh is_divisible_by_2 2 >> $GITHUB_OUTPUT 
           echo "GITHUB_OUTPUT = $GITHUB_OUTPUT"
 
       # TODO: Figure out how to list teams
